[gd_scene load_steps=27 format=2]

[ext_resource path="res://cat_sprites_by_biofunk95_d8y869y-fullview.png" type="Texture" id=1]
[ext_resource path="res://Cat.gd" type="Script" id=2]
[ext_resource path="res://tiger_cat.png" type="Texture" id=3]
[ext_resource path="res://sfx/Cat Meow Angry 1 - QuickSounds.com.mp3" type="AudioStream" id=4]
[ext_resource path="res://sfx/Cat Purring 1 - QuickSounds.com.mp3" type="AudioStream" id=5]
[ext_resource path="res://sfx/Cat Lonely Meows - QuickSounds.com.mp3" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12.1357, 10.0238 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 64, 128, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 32, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 64, 192, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "dragged",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "walk_left",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "yellow_walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "yellow dragged",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "walk_right",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": true,
"name": "yellow_walk_left",
"speed": 5.0
} ]

[node name="Cat" type="KinematicBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.147926, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.295839, -3.03256 )
scale = Vector2( 1.1017, 1.0601 )
frames = SubResource( 11 )
animation = "yellow_walk_right"

[node name="LeftRayCast" type="RayCast2D" parent="."]
position = Vector2( -11.2427, 0.14793 )
enabled = true
cast_to = Vector2( -5, 10 )

[node name="RightRayCast" type="RayCast2D" parent="."]
position = Vector2( 11.7573, 0.14793 )
enabled = true
cast_to = Vector2( 5, 10 )

[node name="AngryMeow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="Purr" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="SadMeow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
